--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -344,6 +344,24 @@ Full-Width Styles
   margin-left: 10px;
 }
 
+.download_link {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    color: white;
+    background-color: #428bca;
+    border-color: #357ebd;
+}
+
 .zip_download_link:hover {
   background: url(../images/sprite_download.png) no-repeat top left;
 }
